# pyo_oracle

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  MANIFEST.in  README.md  environment-dev.yaml  environment.yaml  erddap_data_downloader.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi-publish.yml  python-app.yml
bio_oracle_py/: __init__.py  config.py  main.py
docs/: api.md  constraints.md  index.md  quickstart.md
docs/gallery/: climate-change.md  distributions.md  generate_images.py  global-maps.md  index.md  multivariable.md
docs/tutorials/: downloading-and-subsetting.md  listing-and-filtering.md  xarray-and-plotting.md
pyo_oracle/: __init__.py  _config.py  config.py  main.py  utils.py
tests/: test_config.py  test_main.py  test_main_unit.py  test_utils.py
