[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio_oracle_py"
version = "0.0.1"
authors = [
  { name="Vini Salazar", email="vinicius.salazar@unimelb.edu.au" },
]
description = "Python client for the Bio-ORACLE ERDDAP server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["erddapy",]

[project.urls]
"Homepage" = "https://github.com/bio-oracle/bio-oracle-py"