[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyo_oracle"]

[project]
name = "pyo_oracle"
version = "0.0.1a"
authors = [
  { name="Vini Salazar", email="vinicius.salazar@unimelb.edu.au" },
]
description = "Python client for the Bio-ORACLE ERDDAP server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["erddapy",]

[project.urls]
"Homepage" = "https://github.com/bio-oracle/pyo_oracle"
